# egglist

./: CMakeLists.txt  README.md  config.cpp  config.h  defaults.h  egglist-config.cpp  egglist-config.h  egglist-defaults.h  egglist-engine.cpp  egglist-engine.h  egglist-utils.cpp  egglist-utils.h  engine.cpp  engine.h  main.cpp  utils.cpp  utils.h
resources/: chars.txt
